--- a/content_template.Rmd
+++ b/content_template.Rmd
@@ -14,13 +14,48 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>. This particular template is set to knit to HTML output for inclusion in the Open Plant Pathology blog.
+This is an R Markdown document. Markdown is a simple formatting syntax for
+authoring HTML, PDF, and MS Word documents. For more details on using R Markdown
+see <http://rmarkdown.rstudio.com>. This particular template is set to knit to
+HTML output for inclusion in the Open Plant Pathology blog.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+When you click the **Knit** button a document will be generated that includes
+both content as well as the output of any embedded R code chunks within the
+document. You can embed an R code chunk like this:
 
 ```{r cars}
 summary(cars)
 ```
+
+## Spelling
+
+Please ensure that you have made sufficient efforts to ensure that you have used
+proper spelling. Using RStudio, spellcheck is avaialble in the toolbar, the
+"ABC ✓" button to the right of the "Save" icon.
+
+## Code Formatting
+
+- Inline code can be specified using a single "`" to enclose the code, e.g.,
+`summary(cars)`
+
+- Package names should be bold code, e.g. **`ggplot2`**
+
+- Functions should be referred to using "()" after, e.g. `ggplot()`
+
+- Function parameters should be referred to as inline code where necessary,
+e.g., `aes`.
+
+- Using RStudio highlight code chunks and use "Code > Reindent Lines" to help
+ensure consistent code indenting.
+
+- Follow a consistent code style when writing code, several are available, pick
+one and follow it through the entire post, here are two if you are unfamiliar:
+  
+  - http://adv-r.had.co.nz/Style.html
+  
+  - https://google.github.io/styleguide/Rguide.xml
+  
+- Keep line lengths to <80 characters if at all possible to keep readability
 
 ## Including Plots
 
@@ -30,7 +65,8 @@ You can also embed plots, for example:
 plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+Note that the `echo = FALSE` parameter was added to the code chunk to prevent
+printing of the R code that generated the plot.
 
 ## Including Mathematical Equations
 
@@ -38,7 +74,8 @@ Including equations uses LaTeX notation. To include an equation, wrap it in,
 `$$`, *e.g.* `$$y = ax + b$$` would display: $$y = ax + b$$. To display inline
 use a single `$`, *e.g*, $y$.
 
-Greek symbols are also supported using a "\" followed by the character spelled out.
+Greek symbols are also supported using a "\" followed by the character spelled
+out.
 
 $$y_i \backsim Normal(\mu_i, \sigma)$$
 
