--- a/content_template.Rmd
+++ b/content_template.Rmd
@@ -1,11 +1,13 @@
----
+  ---
 title: "Your Title Here"
 author:
 - name: Your Name Here
   affiliation: Your Affiliation Here
 - name: Your Second Co-Author's Name Here
   affiliation: Your Second Co-Author's Affiliation Here
-output: html_document
+output:
+  blogdown::html_page:
+    df_print: paged
 bibliography: bibliography.bib
 csl: phytopathology.csl
 ---
